add_subdirectory(bundle2pset)
add_subdirectory(dmrecon)
add_subdirectory(featurerecon)
add_subdirectory(fssrecon)
add_subdirectory(makescene)
add_subdirectory(mesh2pset)
add_subdirectory(meshalign)
add_subdirectory(meshclean)
add_subdirectory(meshconvert)
add_subdirectory(prebundle)
add_subdirectory(scene2pset)
add_subdirectory(sceneupgrade)
add_subdirectory(sfmrecon)

if (${WITH_GUI})
    add_subdirectory(umve)
endif()