add_subdirectory(util)
add_subdirectory(math)
add_subdirectory(mve)
add_subdirectory(sfm)
add_subdirectory(fssr)
add_subdirectory(dmrecon)

if (WITH_GUI)
    if (OpenGL_FOUND AND GLEW_FOUND)
        add_subdirectory(ogl)
    else()
        message(FATAL_ERROR "Could not find OpenGL or GLEW, please rebuild without gui (-DWITH_GUI:BOOL=OFF)")
    endif()
endif()